--- a/about.html
+++ b/about.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>About Us - Blitz Tesla Club</title>
+    <title>About Us - Blitz T Club</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -11,14 +11,14 @@
     <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600&display=swap" rel="stylesheet">
     <link rel="icon" type="image/png" href="https://i.postimg.cc/BvmtNLtB/logo.png">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-<script src="nav.js"></script>
+    <script src="navigation.js" defer></script>
 </head>
 <body class="about-page">
     <nav>
         <div class="logo">
             <a href="index.html">
-                <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo">
-                <span>BLITZ TESLA CLUB</span>
+                <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo" loading="lazy" width="50" height="50">
+                <span>BLITZ T CLUB</span>
             </a>
         </div>
         <div class="menu-toggle">
@@ -37,14 +37,14 @@
 
     <main class="about-container">
         <header class="about-header">
-            <h1>About Blitz Tesla Club</h1>
+            <h1>About Blitz T Club</h1>
             <p>Empowering Tesla Owners Through Community</p>
         </header>
 
         <section class="mission-section">
             <div class="mission-content">
                 <h2>Our Mission</h2>
-                <p>As a non-profit organization, Blitz Tesla Club is dedicated to creating a vibrant community for Tesla owners, enthusiasts, and supporters of sustainable transportation. We strive to enhance the Tesla ownership experience through education, events, and mutual support.</p>
+                <p>As a non-profit organization, Blitz T Club is dedicated to creating a vibrant community for Tesla owners, enthusiasts, and supporters of sustainable transportation. We strive to enhance the Tesla ownership experience through education, events, and mutual support.</p>
             </div>
         </section>
 
@@ -144,13 +144,11 @@
         </div>
 
         <div class="footer-bottom">
-            <p>© 2024 Blitz Tesla Club. All rights reserved.</p>
+            <p>© 2024 Blitz T Club. All rights reserved.</p>
             <p class="powered-by">
                 Website powered by <a href="http://www.summitpixels.com" target="_blank">SummitPixels</a>
             </p>
         </div>
     </footer>
-
-    <script src="script.js"></script>
 </body>
 </html> 
