--- a/dashboard.html
+++ b/dashboard.html
@@ -2,11 +2,10 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="mobile-web-app-capable" content="yes">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Dashboard - Blitz Tesla Club</title>
+    <title>Dashboard - Blitz T Club</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -309,14 +308,12 @@
         <div class="logo">
             <a href="index.html">
                 <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo" loading="lazy" width="50" height="50">
-                <span>BLITZ TESLA CLUB</span>
+                <span>BLITZ T CLUB</span>
             </a>
         </div>
-        <button class="menu-toggle" aria-label="Toggle navigation menu">
-            <span></span>
-            <span></span>
-            <span></span>
-        </button>
+        <div class="menu-toggle">
+            <i class="fas fa-bars"></i>
+        </div>
         <ul class="nav-links">
             <!-- Navigation will be populated by navigation.js -->
         </ul>
@@ -409,6 +406,11 @@
     <footer>
         <div class="footer-content">
             <div class="footer-section">
+                <h3>BLITZ T CLUB</h3>
+                <p>Empowering the future of sustainable transportation through innovation and community.</p>
+            </div>
+            
+            <div class="footer-section">
                 <h3>Quick Links</h3>
                 <div class="footer-links">
                     <a href="index.html">Home</a>
@@ -450,7 +452,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>© 2024 Blitz Tesla Club. All rights reserved.</p>
+            <p>© 2024 Blitz T Club. All rights reserved.</p>
             <p class="powered-by">
                 Website powered by <a href="http://www.summitpixels.com" target="_blank">SummitPixels</a>
             </p>
@@ -889,9 +891,9 @@
                         formData.append('email', profile.email);
                         formData.append('_captcha', 'false');
                         formData.append('_template', 'box');
-                        formData.append('_subject', 'Verify Your Blitz Tesla Club Membership');
-                        formData.append('_autoresponse', 'Thank you for verifying your email. Your Blitz Tesla Club membership will be activated shortly.');
-                        formData.append('message', `Welcome to Blitz Tesla Club!
+                        formData.append('_subject', 'Verify Your Blitz T Club Membership');
+                        formData.append('_autoresponse', 'Thank you for verifying your email. Your Blitz T Club membership will be activated shortly.');
+                        formData.append('message', `Welcome to Blitz T Club!
 
 Member ID: ${profile.member_id}
 
@@ -915,7 +917,7 @@ ${verificationUrl}
 If you didn't request this email, please ignore it.
 
 Best regards,
-Blitz Tesla Club Team`);
+Blitz T Club Team`);
 
                         // Send the verification email
                         const emailResponse = await fetch(`https://formsubmit.co/ajax/${profile.email}`, {
