--- a/events.html
+++ b/events.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover, minimal-ui">
     <meta name="apple-mobile-web-app-capable" content="yes">
     <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Events - Blitz Tesla Club</title>
+    <title>Events - Blitz T Club</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -21,7 +21,7 @@
         <div class="logo">
             <a href="index.html">
                 <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo" loading="lazy" width="50" height="50">
-                <span>BLITZ TESLA CLUB</span>
+                <span>BLITZ T CLUB</span>
             </a>
         </div>
         <div class="menu-toggle">
@@ -38,6 +38,7 @@
 
     <footer>
         <div class="footer-content">
+                      
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <div class="footer-links">
@@ -69,10 +70,10 @@
             <div class="footer-section">
                 <h3>Connect With Us</h3>
                 <div class="footer-social">
-                    <a href="https://x.com/BlitzTClub" target="_blank" rel="noopener" aria-label="Follow us on X">
+                    <a href="https://x.com/BlitzTClub" target="_blank" aria-label="Follow us on X">
                         <i class="fa-brands fa-square-x-twitter"></i>
                     </a>
-                    <a href="https://www.instagram.com/blitztclub/" target="_blank" rel="noopener" aria-label="Follow us on Instagram">
+                    <a href="https://www.instagram.com/blitztclub/" target="_blank" aria-label="Follow us on Instagram">
                         <i class="fab fa-instagram"></i>
                     </a>
                 </div>
@@ -80,9 +81,9 @@
         </div>
 
         <div class="footer-bottom">
-            <p>© 2024 Blitz Tesla Club. All rights reserved.</p>
+            <p>© 2024 Blitz T Club. All rights reserved.</p>
             <p class="powered-by">
-                Website powered by <a href="http://www.summitpixels.com" target="_blank" rel="noopener">SummitPixels</a>
+                Website powered by <a href="http://www.summitpixels.com" target="_blank">SummitPixels</a>
             </p>
         </div>
     </footer>
