--- a/login.html
+++ b/login.html
@@ -2,11 +2,8 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
-    <meta name="mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
-    <title>Member Login - Blitz Tesla Club</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
+    <title>Member Login - Blitz T Club</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css" crossorigin="anonymous">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -20,7 +17,7 @@
         <div class="logo">
             <a href="index.html">
                 <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo" loading="lazy" width="50" height="50">
-                <span>BLITZ TESLA CLUB</span>
+                <span>BLITZ T CLUB</span>
             </a>
         </div>
         <button class="menu-toggle" aria-label="Toggle navigation menu">
@@ -77,6 +74,7 @@
 
     <footer>
         <div class="footer-content">
+                      
             <div class="footer-section">
                 <h3>Quick Links</h3>
                 <div class="footer-links">
@@ -90,10 +88,9 @@
             <div class="footer-section">
                 <h3>Member Area</h3>
                 <div class="footer-links">
-                    <a href="login.html">Login</a>
-                    <a href="register.html">Register</a>
                     <a href="sponsors.html">Our Sponsors</a>
                     <a href="#member-benefits">Member Benefits</a>
+                    <a href="#" id="footerLogoutBtn">Logout</a>
                 </div>
             </div>
             
@@ -120,7 +117,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>© 2024 Blitz Tesla Club. All rights reserved.</p>
+            <p>© 2024 Blitz T Club. All rights reserved.</p>
             <p class="powered-by">
                 Website powered by <a href="http://www.summitpixels.com" target="_blank">SummitPixels</a>
             </p>
