--- a/nav-after-login.html
+++ b/nav-after-login.html
@@ -2,7 +2,7 @@
     <div class="logo">
         <a href="/">
             <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo">
-            <span>BLITZ TESLA CLUB</span>
+            <span>BLITZ T CLUB</span>
         </a>
     </div>
     <div class="menu-toggle">
