--- a/verify-email.html
+++ b/verify-email.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no, viewport-fit=cover">
-    <title>Verify Email - Blitz Tesla Club</title>
+    <title>Verify Email - Blitz T Club</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -106,9 +106,9 @@
                     formData.append('email', userEmail);
                     formData.append('_captcha', 'false');
                     formData.append('_template', 'box');
-                    formData.append('_subject', 'Verify Your Blitz Tesla Club Membership');
-                    formData.append('_autoresponse', 'Thank you for verifying your email. Your Blitz Tesla Club membership will be activated shortly.');
-                    formData.append('message', `Welcome to Blitz Tesla Club!
+                    formData.append('_subject', 'Verify Your Blitz T Club Membership');
+                    formData.append('_autoresponse', 'Thank you for verifying your email. Your Blitz T Club membership will be activated shortly.');
+                    formData.append('message', `Welcome to Blitz T Club!
 
 Member ID: ${localStorage.getItem('pendingMemberId')}
 
@@ -132,7 +132,7 @@ ${verificationUrl}
 If you didn't request this email, please ignore it.
 
 Best regards,
-Blitz Tesla Club Team`);
+Blitz T Club Team`);
 
                     // Send the verification email
                     const emailResponse = await fetch(`https://formsubmit.co/ajax/${userEmail}`, {
