--- a/executive.html
+++ b/executive.html
@@ -11,7 +11,7 @@
     <meta property="og:image" content="https://i.postimg.cc/hG0TfXGR/logo2.png">
     <meta property="og:url" content="https://blitztclub.com/executive.html">
     <meta name="twitter:card" content="summary_large_image">
-    <title>Executive Team | Blitz Tesla Club Leadership | Tesla Community</title>
+    <title>Executive Team | Blitz T Club Leadership | Tesla Community</title>
     <link rel="stylesheet" href="styles.css">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.1/css/all.min.css">
     <link rel="preconnect" href="https://fonts.googleapis.com">
@@ -26,8 +26,8 @@
     <nav>
         <div class="logo">
             <a href="index.html">
-                <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo">
-                <span>BLITZ TESLA CLUB</span>
+                <img src="https://i.ibb.co/fkrdXZK/Logo4-white.png" alt="Blitz Tesla Club Logo" loading="lazy" width="50" height="50">
+                <span>BLITZ T CLUB</span>
             </a>
         </div>
         <div class="menu-toggle">
@@ -39,14 +39,14 @@
             <li><a href="gallery.html">Gallery</a></li>
             <li><a href="executive.html">Executives</a></li>
             <li><a href="news.html">News</a></li>
-            <li><a href="#join">Join Us</a></li>
+            <li><a href="register.html">Join Us</a></li>
             <li><a href="login.html">Login</a></li>
         </ul>
     </nav>
 
     <main class="executive-container">
         <header class="executive-header">
-            <h1>Blitz Tesla Club Executive Team</h1>
+            <h1>Blitz T Club Executive Team</h1>
             <p>Meet our dedicated leadership team driving innovation and community engagement in the Tesla community</p>
         </header>
 
@@ -69,7 +69,7 @@
                 <div class="member-info">
                     <h3 itemprop="name">Evan Mao</h3>
                     <h4 itemprop="jobTitle">Chairman (Chair)</h4>
-                    <p itemprop="description">Leading the strategic vision and direction of Blitz Tesla Club. Dedicated to fostering innovation and sustainable growth in the Tesla community.</p>
+                    <p itemprop="description">Leading the strategic vision and direction of Blitz T Club. Dedicated to fostering innovation and sustainable growth in the Tesla community.</p>
                 </div>
             </section>
 
@@ -230,7 +230,7 @@
         </div>
 
         <div class="footer-bottom">
-            <p>© 2024 Blitz Tesla Club. All rights reserved.</p>
+            <p>© 2024 Blitz T Club. All rights reserved.</p>
             <p class="powered-by">
                 Website powered by <a href="http://www.summitpixels.com" target="_blank">SummitPixels</a>
             </p>
