--- a/index.html
+++ b/index.html
@@ -123,6 +123,10 @@
 
         @media (max-width: 768px) {
             .hero {
+                background-attachment: scroll;
+                background-position: 65% center;
+                height: 100vh;
+                min-height: -webkit-fill-available;
                 padding: 40px 20px;
             }
 
@@ -145,6 +149,7 @@
 
         @media (max-width: 480px) {
             .hero {
+                background-position: 68% center;
                 padding: 30px 15px;
             }
 
@@ -156,54 +161,20 @@
             .hero-tagline {
                 font-size: 1.75rem;
                 margin-bottom: 20px;
+                padding: 0 10px;
             }
         }
 
-        /* Mobile optimization for hero background */
+        /* Remove duplicate mobile styles */
         @media (max-width: 768px) {
-            .hero {
-                background-position: center center;
-                height: 100vh;
-                width: 100%;
-                overflow: hidden;
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                min-height: -webkit-fill-available;
-            }
-            
             .hero .section-content {
-                padding: 20px;
-                position: relative;
-                z-index: 2;
-                text-align: center;
-                width: 100%;
-                max-width: 100%;
-                display: flex;
-                flex-direction: column;
-                align-items: center;
-                justify-content: center;
-                gap: 15px;
+                display: none;
             }
             
             .hero-logo img {
-                max-width: min(45%, 200px);
+                max-width: 100%;
                 height: auto;
                 margin: 0 auto;
-            }
-
-            .cta-buttons {
-                display: flex;
-                gap: 10px;
-                flex-wrap: wrap;
-                justify-content: center;
-            }
-
-            .btn {
-                min-width: 120px;
-                padding: 8px 16px;
-                font-size: clamp(0.875rem, 2vw, 1rem);
-                white-space: nowrap;
             }
         }
 
