mobile Latest updates

--- a/dashboard.html
+++ b/dashboard.html
@@ -311,11 +311,11 @@
                 <span>BLITZ T CLUB</span>
             </a>
         </div>
-        <div class="menu-toggle">
+        <button class="menu-toggle" aria-label="Toggle navigation menu">
             <i class="fas fa-bars"></i>
-        </div>
+        </button>
         <ul class="nav-links">
-            <!-- Navigation will be populated by navigation.js -->
+            <!-- Navigation items will be dynamically inserted by navigation.js -->
         </ul>
     </nav>
 
