--- a/dashboard.html
+++ b/dashboard.html
@@ -311,9 +311,9 @@
                 <span>BLITZ T CLUB</span>
             </a>
         </div>
-        <button class="menu-toggle" aria-label="Toggle navigation menu">
+        <div class="menu-toggle" aria-label="Toggle navigation menu">
             <i class="fas fa-bars"></i>
-        </button>
+        </div>
         <ul class="nav-links">
             <!-- Navigation items will be dynamically inserted by navigation.js -->
         </ul>
