--- a/register.html
+++ b/register.html
@@ -450,10 +450,12 @@
                     localStorage.setItem('registrationTime', new Date().toISOString());
 
                     // Get base URL for verification link
-                    const baseUrl = window.location.hostname === 'localhost' 
-                        ? 'http://localhost:3000' 
-                        : 'https://www.blitztclub.com';
-                    const verificationUrl = `${baseUrl}/verify-email.html?token=${verificationToken}`;
+                    const baseUrl = window.location.protocol === 'file:' 
+                        ? '.' // Use relative path for file:// protocol
+                        : window.location.hostname === 'localhost' 
+                            ? 'http://localhost:3000' 
+                            : 'https://www.blitztclub.com';
+                    const verificationUrl = `${baseUrl}/${baseUrl === '.' ? '' : ''}verify-email.html?token=${verificationToken}`;
 
                     // Send verification email using FormSubmit
                     const formData = new FormData();
