--- a/verify-email.html
+++ b/verify-email.html
@@ -96,10 +96,12 @@
                     localStorage.setItem('tokenExpiry', new Date(Date.now() + 24 * 60 * 60 * 1000).toISOString());
 
                     // Get base URL for verification link
-                    const baseUrl = window.location.hostname === 'localhost' 
-                        ? 'http://localhost:3000' 
-                        : 'https://www.blitztclub.com';
-                    const verificationUrl = `${baseUrl}/verify-email.html?token=${verificationToken}`;
+                    const baseUrl = window.location.protocol === 'file:' 
+                        ? '.' // Use relative path for file:// protocol
+                        : window.location.hostname === 'localhost' 
+                            ? 'http://localhost:3000' 
+                            : 'https://www.blitztclub.com';
+                    const verificationUrl = `${baseUrl}/${baseUrl === '.' ? '' : ''}verify-email.html?token=${verificationToken}`;
 
                     // Send verification email using FormSubmit
                     const formData = new FormData();
