--- a/verification-sent.html
+++ b/verification-sent.html
@@ -310,12 +310,8 @@
                     localStorage.setItem('tokenExpiry', new Date(Date.now() + 24 * 60 * 60 * 1000).toISOString());
 
                     // Get base URL for verification link
-                    const baseUrl = window.location.protocol === 'file:' 
-                        ? '.' // Use relative path for file:// protocol
-                        : window.location.hostname === 'localhost' 
-                            ? 'http://localhost:3000' 
-                            : 'https://www.blitztclub.com';
-                    const verificationUrl = `${baseUrl}/${baseUrl === '.' ? '' : ''}verify-email.html?token=${verificationToken}`;
+                    const baseUrl = window.location.href.split('/').slice(0, -1).join('/');
+                    const verificationUrl = `${baseUrl}/verify-email.html?token=${verificationToken}`;
 
                     // Send verification email using FormSubmit
                     const formData = new FormData();
